syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "SecurityLoginProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: UserLogin
message UserLoginFlatData {
    option (routines.entity_type) = "UserLogin";
    option (routines.keys).keys = "user_login_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: userLoginId
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong", (google.api.graphql.relay_options).id = true];
    string current_password = 2 [(routines.opts).field_type = "long-varchar"];
    string password_hint = 3 [(routines.opts).field_type = "description"];
    routines.Indicator is_system = 4 [(routines.opts).field_type = "indicator"];
    routines.Indicator enabled = 5 [(routines.opts).field_type = "indicator"];
    routines.Indicator has_logged_out = 6 [(routines.opts).field_type = "indicator"];
    routines.Indicator require_password_change = 7 [(routines.opts).field_type = "indicator"];
    string last_currency_uom = 8 [(routines.opts).field_type = "id"];
    string last_locale = 9 [(routines.opts).field_type = "very-short"];
    string last_time_zone = 10 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp disabled_date_time = 11 [(routines.opts).field_type = "date-time"];
    int64 successive_failed_logins = 12 [(routines.opts).field_type = "numeric"];
    string external_auth_id = 13 [(routines.opts).field_type = "id-vlong"];
    string user_ldap_dn = 14 [(routines.opts).field_type = "id-vlong"];
    string disabled_by = 15 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    string party_id = 18 [(routines.opts).field_type = "id"];
    string tenant_id = 19 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 98;
    map<string, google.protobuf.Any> attachments = 99 ;
}

message UserLoginKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong", (google.api.graphql.relay_options).id = true];
}

message UserLoginList{
    repeated UserLoginFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserLogins` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

